added Java VM option to provide osgi.ee capability
Change-Id: Ic4823a26191d7fdab232c02f9176be63a8182dbd